--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ target/
 # made by eclipse
 .cache
 .classpath
+.settings
 
 # you can create the eclipse project file by running `sbt eclipse`
 .project
